added add notes
